terraform/tf_1/Terraform/modules/loadbalancer/ALB/alb.tf
#in this template we are creating aws application loadbalancer and target group and alb http listener

resource "aws_alb" "this" {
  name            = "${var.tag_environment}-alb"
  subnets         = var.subnets
  security_groups = [aws_security_group.alb-sg.id]
}

resource "aws_security_group" "alb-sg" {
  name        = "nlb-sg-ecs"
  description = "Allow TLS and HTTP inbound traffic"
  vpc_id      = var.vpc_id
  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "ALB"
  }
}
